--- a/.github/workflows/Recovery-Builder-TWRP.yml
+++ b/.github/workflows/Recovery-Builder-TWRP.yml
@@ -24,6 +24,7 @@ on:
         default: ''
         type: choice
         options:
+        - twrp-10.0-deprecated
         - twrp-12.1
         - twrp-11
         - twrp-9.0
